hero image changed

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,7 +4,7 @@
 			rgba($text-color, 0.4),
 			rgba($secondary-color, 0.4)
 		),
-		url("../img/hero.jpg") no-repeat center;
+		url("../img/hero1.jpg") no-repeat top;
 	background-size: cover;
 	position: relative;
 	padding: 10vh 0;
