--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,5 +1,8 @@
 .heading {
 	padding: 0 0 30px 0;
+	font-size: 1.7rem;
+	color: $text-rev;
+	font-weight: 700;
 	h1 {
 		font-size: 2.8rem;
 		font-weight: 900;
