--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,5 +1,5 @@
 .about {
-	background: $secondary-color;
+	background: $primary-color;
 	color: $text-rev;
 	overflow: hidden;
 	padding: 30px 0 50px 0;
