--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -56,8 +56,8 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		border-bottom: 100px solid $secondary-color;
-		clip-path: polygon(100% 93%, 0% 100%, 100% 100%);
+		border-bottom: 100px solid $primary-color;
+		clip-path: polygon(100% 90%, 0% 100%, 100% 100%);
 		// clip-path: polygon(50% 100%, 0 94%, 100% 94%);
 		// clip-path: polygon(0% 100%, 0% 93%, 50% 100%, 100% 93%, 100% 100%);
 		// clip-path: polygon(
@@ -83,7 +83,7 @@
 	margin-top: 5px;
 
 	.hs-content {
-		background: rgba($text-color, 0.5);
+		background: rgba($text-color, 0.6);
 		padding: 5% 5% 10% 5%;
 		clip-path: polygon(0 0, 100% 0, 100% 81%, 50% 100%, 0 81%);
 
