--- a/scss/_painter-service.scss
+++ b/scss/_painter-service.scss
@@ -8,15 +8,29 @@
 		padding: 0.2rem;
 		background: $primary-color;
 		clip-path: polygon(
-			30% 0%,
-			70% 0%,
-			100% 30%,
-			100% 70%,
-			70% 100%,
-			30% 100%,
-			0% 70%,
-			0% 30%
+			0% 15%,
+			15% 15%,
+			15% 0%,
+			85% 0%,
+			85% 15%,
+			100% 15%,
+			100% 85%,
+			85% 85%,
+			85% 100%,
+			15% 100%,
+			15% 85%,
+			0% 85%
 		);
+		// clip-path: polygon(
+		// 	30% 0%,
+		// 	70% 0%,
+		// 	100% 30%,
+		// 	100% 70%,
+		// 	70% 100%,
+		// 	30% 100%,
+		// 	0% 70%,
+		// 	0% 30%
+		// );
 		// clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 		// clip-path: polygon(
 		// 	0% 15%,
