--- a/scss/_area-cover.scss
+++ b/scss/_area-cover.scss
@@ -7,7 +7,11 @@
 	}
 	.flex-item {
 		flex: 1;
-		min-width: 150px;
+		// flex-wrap: wrap;
+		min-width: 200px;
+		li {
+			max-width: 185px;
+		}
 	}
 
 	.tabs .tab a {
