--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -32,7 +32,7 @@
 }
 
 .footer {
-	background: $secondary-color;
+	background: $primary-color;
 	color: $text-rev;
 	font-size: 0.8rem;
 	font-weight: 500;
