--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -28,6 +28,7 @@
 	border-radius: 2rem;
 	box-shadow: 3px 0px 8px 2px $shad;
 	text-transform: uppercase;
+	letter-spacing: 1px;
 	// clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
 	// clip-path: polygon(
 	// 	0% 20%,
